fix: button styling to align-content center

--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -75,6 +75,7 @@
   justify-content: center;
   width: fit-content;
   align-self: center;
+  align-items: center;
 }
 
 .role-container .report-button:hover {
@@ -92,6 +93,7 @@
   justify-content: center;
   width: fit-content;
   align-self: center;
+  align-items: center;
 }
 
 .role-container .manage-button:hover {
@@ -253,6 +255,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   height: auto;
+  align-items: center;
 }
 
 .remove-friend-button:hover {
@@ -273,6 +276,7 @@
     box-shadow 0.2s;
   font-weight: 500;
   box-shadow: 0 2px 6px rgba(25, 118, 210, 0.08);
+  align-items: center;
 }
 
 .see-match-history:hover {
